--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,14 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="clear_text_button">Clear text button</string>
+    <string name="login">Login</string>
+    <string name="enter_email">Enter email</string>
+    <string name="email">Email:</string>
+    <string name="password">Password:</string>
+    <string name="sign_up">Sign up</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="name">Name:</string>
+    <string name="re_password">Re-Password</string>
+    <string name="register">Register</string>
+    <string name="registration">Registration</string>
 </resources>
