--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,11 +18,13 @@
     <string name="clear_text_button">Clear text button</string>
     <string name="login">Login</string>
     <string name="enter_email">Enter email</string>
+    <string name="enter_password">Enter password</string>
     <string name="email">Email:</string>
     <string name="password">Password:</string>
     <string name="sign_up">Sign up</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="name">Name:</string>
+    <string name="enter_name">Enter name</string>
     <string name="re_password">Re-Password</string>
     <string name="register">Register</string>
     <string name="registration">Registration</string>
